# euroage_plus-project

./: LICENSE  README.md  game_library.py
interface_program/: README.md
interface_program/client/: client.py
interface_program/client_euroage/: config.py  main.py
interface_program/client_euroage/gui/: connectivity_window.py  login_window.py  new_player_window.py  new_story_window.py  players_window.py  telling_story_window.py
interface_program/client_euroage/gui_components/: CustomToolbar.py  CustomTreeView.py
interface_program/client_euroage/network/: client.py
interface_program/client_euroage/utils/: helpers.py
interface_program/server/: mydatabase.db  mydatabase_caritas.db  server.py
interface_program/server_euroage/: mydatabase.db  server.py
narrative_robot/: CMakeLists.txt  README.md  package.xml
narrative_robot/launch/: narrative_robot.launch  narrative_robot_launch.py
narrative_robot/src/: game_library.py  robot.py  robot_test.py
speech_services/: CMakeLists.txt  README.md  package.xml
speech_services/launch/: speech_services.launch  speech_services_launch.py
speech_services/src/: stt_service.py  tts_service.py
speech_services/srv/: Stt.srv  tts_google.srv  tts_microsoft.srv
story_telling/: CMakeLists.txt  README.md  package.xml
story_telling/launch/: story_telling.launch  story_telling_launch.py
story_telling/src/: story_telling_services.py
story_telling/srv/: NewMessage.srv  generate_response.srv  obtain_response.srv  setup_story.srv
