<?xml version="1.0"?>
<package format="3">
  <name>speech_services</name>
  <version>0.0.1</version>
  <description>Package providing ROS services to synthesize text into speech using different Text-to-Speech (TTS) service providers.</description>

  <maintainer email="pedro.almeida@isr.uc.pt">Pedro Vicente Almeida</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
